--- a/mysense/config/sleep_software.conf
+++ b/mysense/config/sleep_software.conf
@@ -1,4 +1,7 @@
-# Specifies the input modules using space as seperator.
+# This module should only be used for testing.
+# 
+# Defines how many seconds to sleep.
 #
 # seconds = "3"
-seconds = "60"
+seconds = "3"
+
