updated default config files to include new parameters

--- a/mysense/config/core.conf
+++ b/mysense/config/core.conf
@@ -8,7 +8,7 @@ platform = "Generic"
 # Specifies the input modules using space as seperator.
 #
 # input = "DateTime"
-input = "DateTime SSHD2"
+input = "DateTime"
 
 # Specifies the input modules using space as seperator.
 #
@@ -28,7 +28,7 @@ sleep = "Soft"
 # Encode the measurement sting.
 # If this is set the device id and length of the data packet is added to every input module.
 # This makes it easy to convert the measurements to JSON format, but it adds an overload of 2 bytes per input module.
-#
+# 
 # Enable this if you have many input modules that you need to decode.
 #
 # encode_measurements = "true"
@@ -48,3 +48,4 @@ log_file = ""
 #
 # log_timestamps = "false"
 log_timestamps = "false"
+
