--- a/mysense/config/input_mb7092.conf
+++ b/mysense/config/input_mb7092.conf
@@ -10,3 +10,8 @@ pin_tx = "20"
 # pin_am = "16"
 pin_am = "16"
 
+# Defines how many samples should be taken.
+#
+# samples = "20"
+samples = "20"
+
