--- a/mysense/config/output_lora_otaa.conf
+++ b/mysense/config/output_lora_otaa.conf
@@ -26,3 +26,13 @@ data_rate = "5"
 # adr = "false"
 adr = "false"
 
+# Wait for data to be sent before continuing.
+#
+# blocking = "true"
+blocking = "true"
+
+# Set minimum time between LoRa messages in seconds
+#
+# minimum_time = "0"
+minimum_time = "0"
+
